--- a/client/index.html
+++ b/client/index.html
@@ -2,28 +2,26 @@
 <html lang="he" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="theme-color" content="#FF6B6B" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    
-    <meta property="og:title" content="טיול צפון צ'כיה 2026" />
-    <meta property="og:description" content="אפליקציית מלווה לטיול משפחתי בצפון צ'כיה – מסלול יום-יומי, ניווט, לינה, המרת מט״ח וגלריית תמונות." />
+    <meta name="apple-mobile-web-app-title" content="Family Navigator" />
+    <meta name="format-detection" content="telephone=no" />
+
+    <meta property="og:title" content="Family Navigator" />
+    <meta property="og:description" content="אפליקציית ניווט למשפחה – מסלול יום-יומי, לינה, מסעדות, המרת מט״ח וגלריית תמונות." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://replit.com/public/images/opengraph.png" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@replit" />
-    <meta name="twitter:title" content="טיול צפון צ'כיה 2026" />
-    <meta name="twitter:description" content="אפליקציית מלווה לטיול משפחתי בצפון צ'כיה – מסלול יום-יומי, ניווט, לינה, המרת מט״ח וגלריית תמונות." />
-    <meta name="twitter:image" content="https://replit.com/public/images/opengraph.png" />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/favicon.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet" />
+    <title>Family Navigator</title>
   </head>
   <body>
     <div id="root"></div>
